--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
         --green-600: hsl(169, 82%, 27%);
         --grey-500: hsl(186, 15%, 59%);
         --grey-900: hsl(187, 24%, 22%);
+        --grey-shadow: hsla(187, 24%, 22%, 0.25);
     }
 
     body {
@@ -213,16 +214,24 @@
         color: var(--red);
     }
 
-    dialog {
+    dialog[open] {
         position: fixed;
-        top: 3rem;
+        top: 2.5rem;
+        z-index: 1;
         background-color: var(--grey-900);
         color: var(--white);
         border-radius: 1rem;
         padding: 2rem;
         border: 0;
-        z-index: 10;
-        box-shadow: 1px 1px 1rem 0.5rem var(--green-200);
+        outline: 0;
+        opacity: 0;
+        box-shadow: 0px 2px 8px 4px var(--grey-shadow);
+        transform-origin: top;
+        animation: slide-down-opacity 3s ease-in-out;
+    }
+
+    dialog[open]::backdrop {
+        background-color: rgba(0, 0, 0, 0.2);
     }
 
     div {
@@ -262,5 +271,31 @@
         .field__group {
             grid-template-columns: 1fr 1fr;
             column-gap: 1rem;
+        }
+    }
+
+    @keyframes slide-down-opacity {
+        0% {
+            opacity: 0;
+            transform: translateY(-3rem);
+        }
+
+        1% {
+            opacity: 0;
+        }
+
+        10% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        90% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        100% {
+            opacity: 0;
+            transform: translateY(-3rem);
         }
     }
